Fix blocks being unable to be dragged out of toolbox
Adjusted z-index in CSS - using less than 20 disables the scrollbar while above 20 (set to 30 in Blockly repository) can cause blocks to be covered when the toolbox is too short

--- a/mobile.css
+++ b/mobile.css
@@ -145,3 +145,7 @@ textarea {
 	left: -40px !important;*/
 	/*transition: 1s !important;*/
 }
+
+.blocklyFlyoutScrollbar {
+	z-index: 20;
+}
